--- a/my_robot_interfaces/CMakeLists.txt
+++ b/my_robot_interfaces/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
+  "msg/Time.msg"
   "msg/Turtle.msg"
   "srv/SetState.srv"
   "srv/ValidateFiscalCode.srv"
