--- a/my_robot_nodes/CMakeLists.txt
+++ b/my_robot_nodes/CMakeLists.txt
@@ -7,16 +7,15 @@ endif()
 
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
-find_package(std_msgs REQUIRED)
 find_package(my_robot_interfaces REQUIRED)
 
 include_directories(include)
 
 add_executable(my_publisher src/my_publisher.cpp)
-ament_target_dependencies(my_publisher rclcpp std_msgs)
+ament_target_dependencies(my_publisher rclcpp my_robot_interfaces)
 
 add_executable(my_subscriber src/my_subscriber.cpp)
-ament_target_dependencies(my_subscriber rclcpp std_msgs)
+ament_target_dependencies(my_subscriber rclcpp my_robot_interfaces)
 
 add_executable(my_service_server src/my_service_server.cpp)
 ament_target_dependencies(my_service_server rclcpp my_robot_interfaces)
