topic and service launch files with arguments

--- a/my_robot_nodes/CMakeLists.txt
+++ b/my_robot_nodes/CMakeLists.txt
@@ -11,11 +11,11 @@ find_package(my_robot_interfaces REQUIRED)
 
 include_directories(include)
 
-add_executable(my_publisher src/my_publisher.cpp)
-ament_target_dependencies(my_publisher rclcpp my_robot_interfaces)
+add_executable(my_topic_publisher src/my_topic_publisher.cpp)
+ament_target_dependencies(my_topic_publisher rclcpp my_robot_interfaces)
 
-add_executable(my_subscriber src/my_subscriber.cpp)
-ament_target_dependencies(my_subscriber rclcpp my_robot_interfaces)
+add_executable(my_topic_subscriber src/my_topic_subscriber.cpp)
+ament_target_dependencies(my_topic_subscriber rclcpp my_robot_interfaces)
 
 add_executable(my_service_server src/my_service_server.cpp)
 ament_target_dependencies(my_service_server rclcpp my_robot_interfaces)
@@ -24,8 +24,8 @@ add_executable(my_service_client src/my_service_client.cpp)
 ament_target_dependencies(my_service_client rclcpp my_robot_interfaces)
 
 install(TARGETS
-  my_publisher
-  my_subscriber
+  my_topic_publisher
+  my_topic_subscriber
   my_service_server
   my_service_client
   DESTINATION lib/${PROJECT_NAME}
