--- a/my_robot_nodes/CMakeLists.txt
+++ b/my_robot_nodes/CMakeLists.txt
@@ -14,35 +14,35 @@ find_package(my_robot_interfaces REQUIRED)
 
 include_directories(include)
 
-add_executable(my_topic_publisher src/my_topic_publisher.cpp)
-ament_target_dependencies(my_topic_publisher rclcpp my_robot_interfaces)
+add_executable(time_publisher src/time_publisher.cpp)
+ament_target_dependencies(time_publisher rclcpp my_robot_interfaces)
 
-add_executable(my_topic_subscriber src/my_topic_subscriber.cpp)
-ament_target_dependencies(my_topic_subscriber rclcpp my_robot_interfaces)
+add_executable(time_subscriber src/time_subscriber.cpp)
+ament_target_dependencies(time_subscriber rclcpp my_robot_interfaces)
 
-add_executable(my_service_server src/my_service_server.cpp)
-ament_target_dependencies(my_service_server rclcpp my_robot_interfaces)
+add_executable(validate_fiscal_code_server src/validate_fiscal_code_server.cpp)
+ament_target_dependencies(validate_fiscal_code_server rclcpp my_robot_interfaces)
 
-add_executable(my_service_client src/my_service_client.cpp)
-ament_target_dependencies(my_service_client rclcpp my_robot_interfaces)
+add_executable(validate_fiscal_code_client src/validate_fiscal_code_client.cpp)
+ament_target_dependencies(validate_fiscal_code_client rclcpp my_robot_interfaces)
 
-add_executable(my_lifecycle_manager src/my_lifecycle_manager.cpp)
-ament_target_dependencies(my_lifecycle_manager rclcpp lifecycle_msgs)
+add_executable(lifecycle_manager src/lifecycle_manager.cpp)
+ament_target_dependencies(lifecycle_manager rclcpp lifecycle_msgs)
 
-add_executable(my_lifecycle_action_server src/my_lifecycle_action_server.cpp)
-ament_target_dependencies(my_lifecycle_action_server rclcpp rclcpp_action rclcpp_lifecycle my_robot_interfaces)
+add_executable(move_robot_server src/move_robot_server.cpp)
+ament_target_dependencies(move_robot_server rclcpp rclcpp_action rclcpp_lifecycle my_robot_interfaces)
 
-add_executable(my_action_client src/my_action_client.cpp)
-ament_target_dependencies(my_action_client rclcpp rclcpp_action rclcpp_lifecycle my_robot_interfaces)
+add_executable(move_robot_client src/move_robot_client.cpp)
+ament_target_dependencies(move_robot_client rclcpp rclcpp_action rclcpp_lifecycle my_robot_interfaces)
 
 install(TARGETS
-  my_topic_publisher
-  my_topic_subscriber
-  my_service_server
-  my_service_client
-  my_lifecycle_manager
-  my_lifecycle_action_server
-  my_action_client
+  time_publisher
+  time_subscriber
+  validate_fiscal_code_server
+  validate_fiscal_code_client
+  lifecycle_manager
+  move_robot_server
+  move_robot_client
   DESTINATION lib/${PROJECT_NAME}
 )
 
